# hey

./: ..code-workspace  .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  README.md  TODO.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg  project.config
.github/workflows/: release.yml
caption/: __init__.py  cli.py  path.py  processor.py  serialize.py  utils.py
caption/feature/: __init__.py  code.py  figure.py  general.py  image.py  result.py  table.py
detector/: __init__.py  cli.py  path.py  titlepage.py
detector/bibliography/: alternate.py  column.py  data.py  strategy.py
detector/feature/: bibliography.py  literature.py  title.py  titlepage.py
detector/literature/: column.py  data.py  strategy.py
detector/parser/: __init__.py  complete.py  date.py  institution.py  matrikel.py  person.py  thesis.py  title.py
docs/: bugs.rst  index.rst  todo.rst
docs/proposal/: 100.md  100.rst  101.md  101.rst  proposal.rst
docs/releases/: 1.10.0.md  1.10.0.rst  1.11.0.md  1.11.0.rst  1.12.0.rst  1.12.rst  1.13.0.rst  1.14.0.rst  1.15.0.rst  1.16.0.rst  1.17.0.rst  1.18.0.rst  1.19.0.rst  1.20.0.rst  1.9.0.md  1.9.0.rst  2.0.0.rst  2.1.0.rst  2.2.0.rst  2.4.0.rst  2.8.0.rst  (+4 more)
doctextstyle/: __init__.py  __patch__.py  cli.py  cluster.py  data.py  extractor.py  features.py  parser.py  path.py  serialize.py  utils.py  vector.py
groupme/: __init__.py  __main__.py  cli.py  horizontals.py  likelihood.py  path.py  serialize.py  structure.py  textnavigator.py  utils.py
hey/: __init__.py  __main__.py  classificator.py  cli.py  cluster.py  document.py  example.py  path.py  undefined.py  utils.py
magic/: __init__.py  cli.py  data.py  path.py
sections/: __init__.py  cli.py  creator.py  ctor.py  font.py  multiple.py  path.py  sections.py  serialize.py  textprocessor.py
tests/: __init__.py  conftest.py  test_huge.py  test_import_all.py
textstyle/: __init__.py  cli.py  cluster.py  extractor.py  features.py  parser.py  serialize.py  utils.py
words/: __init__.py  boxed.py  cli.py  input.py  path.py
(+389 files in other folders)
